--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@uiw/codemirror-theme-github": "^4.22.1",
     "@uiw/react-codemirror": "^4.22.0",
     "axios": "^1.7.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-contentful": "^2.0.31",
