--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
-    "react-spinners": "^0.13.8"
+    "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
